--- a/bin/Dockerfile-python
+++ b/bin/Dockerfile-python
@@ -44,3 +44,8 @@ RUN apt-get clean \
     && apt-get autoremove -y
 
 WORKDIR /tmp
+# overwrite default python from fenics container
+RUN ln -f /usr/bin/python3 /usr/bin/python
+RUN ln -f /usr/local/bin/pip3 /usr/local/bin/pip
+ENTRYPOINT 
+CMD ["python3"]
