--- a/bin/Dockerfile
+++ b/bin/Dockerfile
@@ -1,4 +1,6 @@
 FROM ubuntu:latest
+ENV TZ=America/Denver
+ENV DEBIAN_FRONTEND="noninteractive"
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
     texlive-base \
