--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,12 +2,12 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: 
+    branches:
       - '*'
   schedule:
-      - cron: "0 0 */7 * *"
+      - cron: "0 0 1 * *"
 
 jobs:
   build:
