--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: release
+name: Create Release
 
 on:
   push:
@@ -14,8 +14,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: build
-        run: make build
 
       - name: version
         run: echo "::set-output name=version::$GITHUB.REF"
