only create releases if tags are pushed

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: release
         uses: actions/create-release@v1
-        if: ${{ github.event_name != 'release' }}
+        if: ${{ github.event_name == 'push' }}
         id: create_release
         with:
           draft: false
