--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,8 +20,10 @@ jobs:
           fetch-depth: 0
 
       - name: set name
-        run: echo "::set-output name=version::$(date '+%Y-%m-%d')"
-        id: release_name
+        run: |
+          echo "::set-output name=rel_name::$(date '+%Y-%m-%d')"
+          if [[ ${{ github.ref_name }} == "main" ]]; then echo "::set-output name=tag_name::$(date '+%Y.%m.%d-%H:%M')"; else echo "::set-output name=tag_name::$GITHUB_REF_NAME"; fi
+        id: names
 
       - name: install
         run: sudo apt-get install -yqq texlive-base texlive-latex-base texlive-latex-extra texlive-fonts-recommended texlive-fonts-extra latexmk
@@ -36,8 +38,8 @@ jobs:
         with:
           draft: false
           prerelease: false
-          release_name: ${{ steps.release_name.outputs.version }}
-          tag_name: ${{ github.ref }}
+          release_name: ${{ steps.names.outputs.rel_name }}
+          tag_name: ${{ steps.names.outputs.tag_name }}
           body_path: CHANGELOG.md
         env:
           GITHUB_TOKEN: ${{ github.token }}
