--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,9 @@ jobs:
           if [[ ${{ github.ref_name }} == "main" ]]; then echo "::set-output name=tag_name::$(date '+%Y.%m.%d-%H.%M')"; else echo "::set-output name=tag_name::$GITHUB_REF_NAME"; fi
         id: names
 
+      - name: set body
+        run: echo "# Automated Release from Github Actions" > body.md && echo "_Add release notes here._" >> body.md
+
       - name: install
         run: sudo apt-get install -yqq texlive-base texlive-latex-base texlive-latex-extra texlive-fonts-recommended texlive-fonts-extra latexmk
 
@@ -39,7 +42,7 @@ jobs:
           prerelease: false
           release_name: ${{ steps.names.outputs.rel_name }}
           tag_name: ${{ steps.names.outputs.tag_name }}
-          body_path: CHANGELOG.md
+          body_path: body.md
         env:
           GITHUB_TOKEN: ${{ github.token }}
 
