--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,12 +4,16 @@ on:
   push:
     branches: [ main ]
     paths-ignore:
+      - '*.md'
       - '.github/workflows/release.yml'
+      - '.github/workflows/docker.yml'
   pull_request:
     branches:
       - '*'
     paths-ignore:
+      - '*.md'
       - '.github/workflows/release.yml'
+      - '.github/workflows/docker.yml'
   schedule:
       - cron: "0 0 1 * *"
 
